[tool.poetry]
name = "snoopy"
version = "2.0.0"
description = "Reddit user watcher that stickies comments and reports activity via Discord."
authors = ["EthanC <16727756+EthanC@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.21.1"
loguru = "^0.6.0"
notifiers = "^1.3.3"
praw = "^7.6.1"
discord-webhook = "^1.0.0"

[tool.poetry.dev-dependencies]
pylint = "^2.16.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
