[tool.poetry]
name = "snoopy"
version = "2.0.0"
description = "Reddit user watcher that stickies comments and reports activity via Discord."
authors = ["EthanC <16727756+EthanC@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
loguru-discord = "^1.1.0"
praw = "^7.7.1"
discord-webhook = "^1.3.0"

[tool.poetry.dev-dependencies]
pylint = "^3.0.2"
black = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
